completed mobile page

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <h2 class="hidden">Product Overview</h2>
         <div id="flex">
         <div id="can">
-        <img src="images/can.jpg" alt="beer bottle">
+        <img src="images/can.jpg" alt="aluminum can">
         <h3>Can</h3>
         <p>Mauris a molestie justo, vitae ultricies sapien. Vestibulum pharetra, risus et fringilla feugiat, ex mauris tincidunt velit, in scelerisque turpis eros porttitor urna. Fusce auctor varius nisl, id gravida metus gravida id. Mauris eu ante sit amet sapien sodales sagittis. Proin ut cursus orci.</p>
         </div>
        
         <div id="bottle">
-        <img src="images/bottle.jpg" alt="aluminum can">
+        <img src="images/bottle.jpg" alt="beer bottle">
         <h3>Bottle</h3>
         <p>Donec sollicitudin lacus quis nisl sollicitudin, nec iaculis erat lacinia. Etiam sit amet tortor nec sapien dignissim porttitor eu ut nisi. Praesent bibendum, massa non facilisis dignissim, sem magna facilisis tellus, eu vehicula lectus ante vitae leo.</p>
         </div>
