--- a/index_mobile.html
+++ b/index_mobile.html
@@ -1,13 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="main.css">
-    <title>Midterm Scaffold Mobile</title>
-</head>
-<body>
-    
-    
-</body>
-</html>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/mobile.css">
+        <title>Midterm Scaffold Mobile</title>
+    </head>
+    <body>
+        <header class="grid">
+            <a id="logo" href="index_mobile.html"><img src="images/logo.svg" alt="company logo"></a>
+            <a id="menu" href="#"><img src="images/burger-menu.svg" alt="hamburger menu"></a>    
+        </header>
+
+        <img src="images/video-placeholder-mobile.png" alt="video-placeholder">
+
+        <section id="about-us" class="grid">
+            <h1>About Us</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam venenatis libero ut dolor placerat maximus eu in metus. Suspendisse interdum metus sit amet sem congue feugiat convallis sed lacus. Nunc molestie est nec libero consequat laoreet. Phasellus ultrices fringilla elit non interdum. Nullam id nibh volutpat, vestibulum magna ac, egestas ex. Ut semper, neque vitae sodales cursus, mauris lorem maximus leo, maximus pharetra lacus erat vel nunc.  </p>
+            <p>Vestibulum id dolor pulvinar, iaculis elit ac, congue nisl. Cras consectetur varius fringilla. Suspendisse porttitor tortor a arcu gravida vulputate vitae at quam. Etiam ornare tincidunt velit et elementum. Phasellus quis odio arcu. Morbi fermentum faucibus posuere. Suspendisse malesuada massa mi, nec placerat ligula porta id. Morbi et mi a ante congue porttitor eget ac odio.</p>
+        </section>
+
+        <section id="product-overview" class="grid">
+            <h2 class="hidden">Product Overview</h2>
+            <img src="images/can.jpg" alt="aluminum can">
+            <h3>Can</h3>
+            <p>Mauris a molestie justo, vitae ultricies sapien. Vestibulum pharetra, risus et fringilla feugiat, ex mauris tincidunt velit, in scelerisque turpis eros porttitor urna. Fusce auctor varius nisl, id gravida metus gravida id. Mauris eu ante sit amet sapien sodales sagittis. Proin ut cursus orci.</p>
+            <img src="images/bottle.jpg" alt="beer bottle">
+            <h3>Bottle</h3>
+            <p>Mauris a molestie justo, vitae ultricies sapien. Vestibulum pharetra, risus et fringilla feugiat, ex mauris tincidunt velit, in scelerisque turpis eros porttitor urna. Fusce auctor varius nisl, id gravida metus gravida id. Mauris eu ante sit amet sapien sodales sagittis. Proin ut cursus orci.</p>
+        </section>
+
+        <footer class="grid">
+            <nav id="lower-nav">
+            <h2 class="hidden">Lower Navigation</h2>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            </nav>
+
+            <aside>
+                <h2 class="hidden">Social Media</h2>
+                <ul>
+                    <li><a href="#"><img src="images/facebook.svg" alt="facebook logo"></a></li>
+                    <li><a href="#"><img src="images/instagram.svg" alt="instagram logo"></a></li>
+                    <li><a href="#"><img src="images/twitter.svg" alt="twitter logo"></a></li>
+                </ul>
+            </aside>
+
+            <a id="logo-2" href="index_mobile.html"><img src="images/logo.svg" alt="company logo"></a>
+        </footer>
+    </body>
+    </html>
